--- a/index.html
+++ b/index.html
@@ -220,11 +220,8 @@
         <div id="analysis" class="section">
             <h2>번호 분석</h2>
             <div class="button-group">
-                <button onclick="analyzeFrequency()">빈도 분석</button>
-                <button onclick="analyzeRange()">구간별 분석</button>
-                <button onclick="analyzeEvenOdd()">홀짝 분석</button>
-                <button onclick="analyzeSum()">합계 분석</button>
-                <button onclick="analyzeLastDigit()">끝수 분석</button>
+                <button onclick="analyzeFrequency()">번호 빈도 분석</button>
+                <button onclick="showWinningProbability()">당첨 확률</button>
             </div>
             <div id="analysis-output" class="analysis-output"></div>
         </div>
@@ -359,7 +356,7 @@
             ).join("");
         }
 
-        // 빈도 분석
+        // 번호 빈도 분석
         function analyzeFrequency() {
             const output = document.getElementById("analysis-output");
             output.innerHTML = "<strong>번호 빈도 분석</strong><br>";
@@ -374,79 +371,31 @@
             });
         }
 
-        // 구간별 분석
-        function analyzeRange() {
+        // 로또 당첨 확률 계산
+        function showWinningProbability() {
             const output = document.getElementById("analysis-output");
-            output.innerHTML = "<strong>구간별 분석</strong><br>";
-            if (lottoData.length === 0) {
-                output.innerHTML += "데이터가 없습니다.";
-                return;
-            }
-            const ranges = { "1-10": 0, "11-20": 0, "21-30": 0, "31-40": 0, "41-45": 0 };
-            lottoData.forEach(entry => entry.numbers.forEach(num => {
-                if (num <= 10) ranges["1-10"]++;
-                else if (num <= 20) ranges["11-20"]++;
-                else if (num <= 30) ranges["21-30"]++;
-                else if (num <= 40) ranges["31-40"]++;
-                else ranges["41-45"]++;
-            }));
-            for (let range in ranges) {
-                output.innerHTML += `${range}: ${ranges[range]}회<br>`;
-            }
-        }
+            output.innerHTML = "<strong>로또 당첨 확률</strong><br>";
+            
+            // 총 조합 수 (45C6)
+            const totalCombinations = 8145060; // 45 choose 6
+            
+            // 각 등수별 조합 수
+            const probabilities = {
+                "1등 (6개 일치)": 1,
+                "2등 (5개 일치 + 보너스)": 6 * 1, // 5개 고정 후 나머지 1개가 보너스
+                "3등 (5개 일치)": 6 * 38, // 5개 고정 후 나머지 1개가 보너스 제외 38개
+                "4등 (4개 일치)": 15 * 39 * 1, // 4개 고정 후 나머지 2개 조합
+                "5등 (3개 일치)": 20 * 741 // 3개 고정 후 나머지 3개 조합
+            };
 
-        // 홀짝 분석
-        function analyzeEvenOdd() {
-            const output = document.getElementById("analysis-output");
-            output.innerHTML = "<strong>홀짝 분석</strong><br>";
-            if (lottoData.length === 0) {
-                output.innerHTML += "데이터가 없습니다.";
-                return;
+            // 확률 계산 및 출력
+            output.innerHTML += "로또 6/45의 이론적 당첨 확률 (총 조합 수: 8,145,060)<br>";
+            for (let rank in probabilities) {
+                const chance = probabilities[rank];
+                const probability = (chance / totalCombinations * 100).toFixed(8);
+                output.innerHTML += `${rank}: ${chance} / 8,145,060 (${probability}%)<br>`;
             }
-            const distribution = { "0:6": 0, "1:5": 0, "2:4": 0, "3:3": 0, "4:2": 0, "5:1": 0, "6:0": 0 };
-            lottoData.forEach(entry => {
-                const evenCount = entry.numbers.filter(num => num % 2 === 0).length;
-                distribution[`${evenCount}:${6 - evenCount}`]++;
-            });
-            for (let ratio in distribution) {
-                if (distribution[ratio] > 0) output.innerHTML += `홀:${ratio.split(':')[1]}, 짝:${ratio.split(':')[0]} - ${distribution[ratio]}회<br>`;
-            }
-        }
-
-        // 합계 분석
-        function analyzeSum() {
-            const output = document.getElementById("analysis-output");
-            output.innerHTML = "<strong>합계 분석</strong><br>";
-            if (lottoData.length === 0) {
-                output.innerHTML += "데이터가 없습니다.";
-                return;
-            }
-            const sums = lottoData.map(entry => entry.numbers.reduce((a, b) => a + b, 0));
-            const bins = { "0-100": 0, "101-150": 0, "151-200": 0, "201+": 0 };
-            sums.forEach(sum => {
-                if (sum <= 100) bins["0-100"]++;
-                else if (sum <= 150) bins["101-150"]++;
-                else if (sum <= 200) bins["151-200"]++;
-                else bins["201+"]++;
-            });
-            for (let bin in bins) {
-                output.innerHTML += `${bin}: ${bins[bin]}회<br>`;
-            }
-        }
-
-        // 끝수 분석
-        function analyzeLastDigit() {
-            const output = document.getElementById("analysis-output");
-            output.innerHTML = "<strong>끝수 분석</strong><br>";
-            if (lottoData.length === 0) {
-                output.innerHTML += "데이터가 없습니다.";
-                return;
-            }
-            const digits = Array(10).fill(0);
-            lottoData.forEach(entry => entry.numbers.forEach(num => digits[num % 10]++));
-            digits.forEach((count, index) => {
-                if (count > 0) output.innerHTML += `끝수 ${index}: ${count}회<br>`;
-            });
+            output.innerHTML += "<br>참고: 실제 당첨은 번호 선택 패턴과 무관하며, 이론적 확률입니다.";
         }
 
         // 초기화
