--- a/index.html
+++ b/index.html
@@ -152,18 +152,35 @@
             margin: 20px 0;
         }
         .analysis-output {
-            margin-top: 20px;
-            font-size: 14px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #f9fbfc;
+            border: 1px solid #00a1b9;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 700px;
             text-align: left;
-            max-width: 600px;
-            margin-left: auto;
-            margin-right: auto;
+            font-size: 14px;
+            line-height: 1.6;
+            color: #333;
+        }
+        .analysis-output strong {
+            color: #00a1b9;
+            font-size: 16px;
+            display: block;
+            margin-bottom: 10px;
+        }
+        .analysis-output br {
+            margin-bottom: 5px;
         }
         @media (max-width: 1024px) {
             .container {
                 width: 100%;
                 margin: 10px;
                 padding: 20px;
+            }
+            .analysis-output {
+                max-width: 90%;
             }
         }
         @media (max-width: 768px) {
@@ -520,7 +537,7 @@
             });
         }
 
-        // 로또 당첨 패턴 분석
+        // 당첨 패턴 분석
         function analyzeWinningPatterns() {
             const output = document.getElementById("analysis-output");
             output.innerHTML = "<strong>로또 당첨 패턴 분석</strong><br>";
@@ -567,7 +584,7 @@
             const frequency = Array(45).fill(0);
             lottoData.forEach(entry => entry.numbers.forEach(num => frequency[num - 1]++));
             const totalNumbers = lottoData.length * 6;
-            const mean = totalNumbers / 45; // 번호당 평균 출현 횟수
+            const mean = totalNumbers / 45;
             const deviations = frequency.map((count, index) => ({
                 number: index + 1,
                 deviation: Math.abs(count - mean)
@@ -590,19 +607,19 @@
                 output.innerHTML += "10회차 이상의 데이터가 필요합니다.";
                 return;
             }
-            const recentData = lottoData.slice(-10); // 최근 10회차
+            const recentData = lottoData.slice(-10);
             const frequency = Array(45).fill(0);
             recentData.forEach(entry => entry.numbers.forEach(num => frequency[num - 1]++));
             
             const hotNumbers = frequency
                 .map((count, index) => ({ num: index + 1, count }))
                 .sort((a, b) => b.count - a.count)
-                .slice(0, 5); // 상위 5개 핫 번호
+                .slice(0, 5);
             const coldNumbers = frequency
                 .map((count, index) => ({ num: index + 1, count }))
                 .filter(item => item.count > 0)
                 .sort((a, b) => a.count - b.count)
-                .slice(0, 5); // 하위 5개 콜드 번호 (0 제외)
+                .slice(0, 5);
 
             output.innerHTML += `분석 대상: 최근 ${recentData.length}회차<br><br>`;
             output.innerHTML += "<strong>핫 번호 (자주 나온 상위 5개)</strong>:<br>";
