--- a/index.html
+++ b/index.html
@@ -155,31 +155,42 @@
         }
         .analysis-output {
             margin: 20px auto;
-            padding: 25px;
-            background: linear-gradient(135deg, #ffffff, #e6f0fa);
-            border-radius: 12px;
-            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
-            max-width: 750px;
-            text-align: left;
+            padding: 20px 30px;
+            background: linear-gradient(135deg, #ffffff 0%, #e6faff 100%);
+            border-radius: 15px;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+            max-width: 500px; /* 너비 축소로 공간 활용 */
+            text-align: center; /* 중앙 정렬 */
             font-size: 15px;
             line-height: 1.8;
             color: #2c3e50;
             opacity: 0;
             animation: fadeIn 0.5s ease forwards;
+            position: relative;
+            overflow: hidden;
+        }
+        .analysis-output::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: linear-gradient(90deg, #00a1b9, #007a8c);
         }
         .analysis-output strong {
             font-size: 18px;
             color: #00a1b9;
             display: block;
-            margin-bottom: 12px;
-            border-bottom: 2px solid #00a1b9;
+            margin-bottom: 15px;
             padding-bottom: 5px;
+            font-weight: 700;
         }
         .analysis-output br {
             margin-bottom: 8px;
         }
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
+            from { opacity: 0; transform: translateY(15px); }
             to { opacity: 1; transform: translateY(0); }
         }
         @media (max-width: 1024px) {
@@ -212,6 +223,9 @@
             }
             h2 {
                 font-size: 20px;
+            }
+            .analysis-output {
+                padding: 15px 20px;
             }
         }
     </style>
