--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
             justify-content: center;
             margin: 20px 0;
         }
-        .analysis-output {
+        .analysis-output, .generator-output {
             margin: 20px auto;
             padding: 20px 30px;
             background: linear-gradient(135deg, #ffffff 0%, #e6faff 100%);
             border-radius: 15px;
             box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
-            max-width: 500px; /* 너비 축소로 공간 활용 */
-            text-align: center; /* 중앙 정렬 */
+            max-width: 500px;
+            text-align: center;
             font-size: 15px;
             line-height: 1.8;
             color: #2c3e50;
@@ -169,7 +169,7 @@
             position: relative;
             overflow: hidden;
         }
-        .analysis-output::before {
+        .analysis-output::before, .generator-output::before {
             content: '';
             position: absolute;
             top: 0;
@@ -178,7 +178,7 @@
             height: 4px;
             background: linear-gradient(90deg, #00a1b9, #007a8c);
         }
-        .analysis-output strong {
+        .analysis-output strong, .generator-output strong {
             font-size: 18px;
             color: #00a1b9;
             display: block;
@@ -186,8 +186,14 @@
             padding-bottom: 5px;
             font-weight: 700;
         }
-        .analysis-output br {
-            margin-bottom: 8px;
+        .generator-output .numbers {
+            margin: 10px 0;
+            font-size: 16px;
+            color: #00a1b9;
+        }
+        .generator-output .score {
+            font-style: italic;
+            color: #666;
         }
         @keyframes fadeIn {
             from { opacity: 0; transform: translateY(15px); }
@@ -199,7 +205,7 @@
                 margin: 15px auto;
                 padding: 20px;
             }
-            .analysis-output {
+            .analysis-output, .generator-output {
                 max-width: 90%;
             }
         }
@@ -224,7 +230,7 @@
             h2 {
                 font-size: 20px;
             }
-            .analysis-output {
+            .analysis-output, .generator-output {
                 padding: 15px 20px;
             }
         }
@@ -258,9 +264,15 @@
         <div id="generator" class="section">
             <h2>번호 생성기</h2>
             <div class="button-group">
-                <button onclick="generateNumbers()">랜덤 번호 생성</button>
+                <button onclick="generateRandom()">기본 랜덤 생성</button>
+                <button onclick="generateHighFrequency()">고빈도 기반 생성</button>
+                <button onclick="generateRecentTrend()">최근 추세 생성</button>
+                <button onclick="generateBalancedRange()">구간 균형 생성</button>
+                <button onclick="generateEvenOddBalanced()">홀짝 균형 생성</button>
+                <button onclick="generateSumRange()">합계 범위 생성</button>
+                <button onclick="generateNoConsecutive()">연속 최소화 생성</button>
             </div>
-            <div id="generated-numbers" class="number-container"></div>
+            <div id="generator-output" class="generator-output"></div>
         </div>
         <div id="analysis" class="section">
             <h2>번호 분석</h2>
@@ -396,18 +408,174 @@
             return start;
         }
 
-        // 랜덤 번호 생성
-        function generateNumbers() {
-            const container = document.getElementById("generated-numbers");
+        // 번호 생성 후 분석 함수
+        function analyzeGeneratedNumbers(numbers) {
+            const frequency = Array(45).fill(0);
+            lottoData.forEach(entry => entry.numbers.forEach(num => frequency[num - 1]++));
+            const totalNumbers = lottoData.length * 6;
+            const meanFreq = totalNumbers / 45;
+            const ranges = { "1-10": 0, "11-20": 0, "21-30": 0, "31-40": 0, "41-45": 0 };
+            const evenCount = numbers.filter(num => num % 2 === 0).length;
+            const sum = numbers.reduce((a, b) => a + b, 0);
+            let consecutiveCount = 0;
+
+            numbers.forEach(num => {
+                if (num <= 10) ranges["1-10"]++;
+                else if (num <= 20) ranges["11-20"]++;
+                else if (num <= 30) ranges["21-30"]++;
+                else if (num <= 40) ranges["31-40"]++;
+                else ranges["41-45"]++;
+            });
+            const sorted = [...numbers].sort((a, b) => a - b);
+            for (let i = 1; i < sorted.length; i++) {
+                if (sorted[i] - sorted[i - 1] === 1) consecutiveCount++;
+            }
+
+            let score = 0;
+            score += (frequency.filter((f, i) => numbers.includes(i + 1)).reduce((a, b) => a + b, 0) / (meanFreq * 6)) * 30; // 빈도 점수
+            score += (Object.values(ranges).filter(v => v > 0).length === 5 ? 20 : 10); // 구간 균형
+            score += (evenCount === 3 || evenCount === 4 ? 20 : 10); // 홀짝 비율
+            score += (sum >= 100 && sum <= 150 ? 20 : 10); // 합계 범위
+            score -= (consecutiveCount * 5); // 연속 번호 페널티
+
+            return Math.min(Math.max(score, 0), 100);
+        }
+
+        // 기본 랜덤 번호 생성
+        function generateRandom() {
             const numbers = [];
             while (numbers.length < 6) {
                 const rand = Math.floor(Math.random() * 45) + 1;
                 if (!numbers.includes(rand)) numbers.push(rand);
             }
             numbers.sort((a, b) => a - b);
-            container.innerHTML = numbers.map(num => 
-                `<div class="number ${getRangeClass(num)}">${num}</div>`
-            ).join("");
+            displayGeneratedNumbers(numbers, "기본 랜덤 번호");
+        }
+
+        // 고빈도 번호 기반 생성
+        function generateHighFrequency() {
+            if (lottoData.length === 0) {
+                document.getElementById("generator-output").innerHTML = "데이터가 없습니다.";
+                return;
+            }
+            const frequency = Array(45).fill(0);
+            lottoData.forEach(entry => entry.numbers.forEach(num => frequency[num - 1]++));
+            const topNumbers = frequency
+                .map((count, index) => ({ num: index + 1, count }))
+                .sort((a, b) => b.count - a.count)
+                .slice(0, 10)
+                .map(item => item.num);
+            const numbers = [...topNumbers.slice(0, 3)]; // 상위 3개 고정
+            while (numbers.length < 6) {
+                const rand = Math.floor(Math.random() * 45) + 1;
+                if (!numbers.includes(rand)) numbers.push(rand);
+            }
+            numbers.sort((a, b) => a - b);
+            displayGeneratedNumbers(numbers, "고빈도 기반 번호");
+        }
+
+        // 최근 추세 기반 생성
+        function generateRecentTrend() {
+            if (lottoData.length < 10) {
+                document.getElementById("generator-output").innerHTML = "10회차 이상의 데이터가 필요합니다.";
+                return;
+            }
+            const recentData = lottoData.slice(-10);
+            const frequency = Array(45).fill(0);
+            recentData.forEach(entry => entry.numbers.forEach(num => frequency[num - 1]++));
+            const hotNumbers = frequency
+                .map((count, index) => ({ num: index + 1, count }))
+                .sort((a, b) => b.count - a.count)
+                .slice(0, 5)
+                .map(item => item.num);
+            const numbers = [...hotNumbers.slice(0, 3)]; // 상위 3개 고정
+            while (numbers.length < 6) {
+                const rand = Math.floor(Math.random() * 45) + 1;
+                if (!numbers.includes(rand)) numbers.push(rand);
+            }
+            numbers.sort((a, b) => a - b);
+            displayGeneratedNumbers(numbers, "최근 추세 기반 번호");
+        }
+
+        // 구간 균형 번호 생성
+        function generateBalancedRange() {
+            const ranges = [
+                { min: 1, max: 10 },
+                { min: 11, max: 20 },
+                { min: 21, max: 30 },
+                { min: 31, max: 40 },
+                { min: 41, max: 45 }
+            ];
+            const numbers = [];
+            ranges.forEach(range => {
+                let num;
+                do {
+                    num = Math.floor(Math.random() * (range.max - range.min + 1)) + range.min;
+                } while (numbers.includes(num));
+                numbers.push(num);
+            });
+            while (numbers.length < 6) {
+                const rand = Math.floor(Math.random() * 45) + 1;
+                if (!numbers.includes(rand)) numbers.push(rand);
+            }
+            numbers.sort((a, b) => a - b);
+            displayGeneratedNumbers(numbers, "구간 균형 번호");
+        }
+
+        // 홀짝 비율 조정 생성
+        function generateEvenOddBalanced() {
+            const numbers = [];
+            const targetEven = Math.random() < 0.5 ? 3 : 4; // 3:3 또는 4:2
+            while (numbers.length < targetEven) {
+                const rand = Math.floor(Math.random() * 22 + 1) * 2; // 짝수
+                if (!numbers.includes(rand)) numbers.push(rand);
+            }
+            while (numbers.length < 6) {
+                const rand = Math.floor(Math.random() * 22 + 1) * 2 - 1; // 홀수
+                if (!numbers.includes(rand)) numbers.push(rand);
+            }
+            numbers.sort((a, b) => a - b);
+            displayGeneratedNumbers(numbers, "홀짝 균형 번호");
+        }
+
+        // 합계 범위 맞춤 생성
+        function generateSumRange() {
+            let numbers = [];
+            let attempts = 0;
+            do {
+                numbers = [];
+                while (numbers.length < 6) {
+                    const rand = Math.floor(Math.random() * 45) + 1;
+                    if (!numbers.includes(rand)) numbers.push(rand);
+                }
+                numbers.sort((a, b) => a - b);
+                attempts++;
+            } while ((numbers.reduce((a, b) => a + b, 0) < 100 || numbers.reduce((a, b) => a + b, 0) > 150) && attempts < 100);
+            displayGeneratedNumbers(numbers, "합계 범위 번호 (100-150)");
+        }
+
+        // 연속 번호 최소화 생성
+        function generateNoConsecutive() {
+            const numbers = [];
+            while (numbers.length < 6) {
+                const rand = Math.floor(Math.random() * 45) + 1;
+                if (!numbers.includes(rand) && !numbers.some(n => Math.abs(n - rand) === 1)) {
+                    numbers.push(rand);
+                }
+            }
+            numbers.sort((a, b) => a - b);
+            displayGeneratedNumbers(numbers, "연속 최소화 번호");
+        }
+
+        // 생성된 번호 출력 및 분석
+        function displayGeneratedNumbers(numbers, title) {
+            const output = document.getElementById("generator-output");
+            const score = lottoData.length > 0 ? analyzeGeneratedNumbers(numbers) : "데이터 부족";
+            output.innerHTML = `
+                <strong>${title}</strong><br>
+                <div class="numbers">${numbers.join(', ')}</div>
+                <div class="score">분석 점수: ${typeof score === 'number' ? `${score.toFixed(2)}%` : score}</div>
+            `;
         }
 
         // 번호 빈도 분석
